--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="container text-center">
                 <img class="profile-image" src="assets/profile-image.png" alt="">
                 <h1 class="name">Hariom</h1>
-                <div class="title">Developer &amp; Systems Engineer</div>
+                <div class="title">Security Researcher, Programmer &amp; Developer</div>
                 <div class="profile">
                     <p>A dedicated worker, self-starter, team player and multi-tasker pursuing M.Tech(CSE) from Indian Institute of Technology Kanpur, B.Tech(CSE) from Haldia Institute of Technology, app developer and programmer with grasp of Java, Python, Linux and DBMS in detail, seeking to leverage acquired academic knowledge to practical use. Currently 
                     working as a teaching assistant for Computer Systems Security course offered by IITK. I'm currently doing research in the field of Adversarial Malware Generation for API Call based classifiers for M.Tech thesis.</p>
